# factory

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  go.mod  install.sh  package.json  tsconfig.json
.coding-agent-plans/: add-cli-version-upgrade.md  add-complexity-override.md  add-interactive-question-session.md  add-learned-guidance-system.md  add-prototype-stage.md  add-task-completion-handoff.md  add-task-feedback-loop.md  add-token-cost-breakdown.md  add-triage-routed-implementer-pool.md  add-visual-task-briefs.md  add-weekly-upgrade-prompts.md  add-zsh-completion.md  alert-once-per-parked-episode.md  confirm-inferred-delivery.md  earned-autonomy-program.md  minify-standalone-binaries.md  registry-driven-cli-dispatch-and-completion.md  review-round-memory.md
scripts/: build-local.sh  build.sh
src/: add-options.ts  add-route.ts  add_options.rs  agent-session.ts  agent_session.rs  agents.rs  agents.ts  args.ts  ask.rs  ask.ts  attention.ts  auto-upgrade.ts  auto_upgrade.rs  backlog.rs  backlog.ts  cli.ts  clock.rs  commands.ts  commit-message.ts  complete.ts  completion.ts  conductor.rs  conductor.ts  config.rs  config.ts  deck.ts  decomposition.ts  delegate.ts  delivery.ts  dispatch-chain.ts  editor.rs  editor.ts  effort.ts  eval-run.ts  evals.rs  evals.ts  exec.rs  exec.ts  feedback.rs  feedback.ts  (+40 more)
tests/: add-options.test.ts  add-route.test.ts  agent-session.test.ts  agents.test.ts  args.test.ts  ask.test.ts  attention.test.ts  auto-upgrade.test.ts  commit-message.test.ts  complete.test.ts  completion.test.ts  conductor.test.ts  git.test.ts  (+32 more)
(+42 files in other folders)
